some style added

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   <body>
 
    <header>
-
+     <h3>Calcolo Biglietto</h3>
    </header>
 
-   <div class="">
 
-     <input id="kilometri" type="number" name="" value="" placeholder="Km">
-     <input id="age" type="number" name="" value="" placeholder="età">
+   <div id="console">
+     <label for="kilometri">Kilometri da percorrere</label>
+    <input id="kilometri" type="number" name="" value="" placeholder="Km">
+     <label for="age">età viaggiatore</label>
+    <input id="age" type="number" name="" value="" placeholder="età">
      <button onclick="calcPrice()" type="button" name="button">calcola</button>
      <span id="total"></span>
-   </div>
+  </div>
 
 
    <script src="js/script.js" charset="utf-8"></script>
