added button for download text file with travel infos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
    <header>
-     <h3>Calcolo Biglietto</h3>
+     <h3>Calcolo Biaasglietto</h3>
    </header>
 
 
@@ -19,9 +19,11 @@
     <input id="age" type="number" name="" value="" placeholder="età">
      <button onclick="calcPrice()" type="button" name="button">calcola</button>
      <span id="total"></span>
+     <button id="downloadbutton" type="button" onclick="download('ticket.txt ', text)" name="button">Scarica il tuo ticket!!</button>
   </div>
 
 
-   <script src="js/script.js" charset="utf-8"></script>
+
+  <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
