--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   <body>
 
    <header>
-     <h3>Calcolo Biaasglietto</h3>
+     <h3>Calcolo Biglietto</h3>
    </header>
 
 
    <div id="console">
+
      <label for="kilometri">Kilometri da percorrere</label>
-    <input id="kilometri" type="number" name="" value="" placeholder="Km">
+     <input id="kilometri" type="number" name="" value="" placeholder="Km">
      <label for="age">età viaggiatore</label>
-    <input id="age" type="number" name="" value="" placeholder="età">
+     <input id="age" type="number" name="" value="" placeholder="età">
      <button onclick="calcPrice()" type="button" name="button">calcola</button>
      <span id="total"></span>
      <button id="downloadbutton" type="button" onclick="download('ticket.txt ', text)" name="button">Scarica il tuo ticket!!</button>
+
   </div>
 
 
